
Next Major Release
------------------

- MySQL 5.5: The test suite was freezing in checkBackwardTimeTravel. Fixed.

- Added performance metrics using the perfmetrics package.

- zodbconvert: Add an --incremental option to the zodbconvert script,
  letting you convert additional transactions at a later date, or
  update a non-live copy of your database, copying over missing
  transactions.

- Replication: Added the ro-replica-conf option, which tells RelStorage
  to use a read-only database replica for load connections. This makes
  it easy for RelStorage clients to take advantage of read-only
  database replicas.

- Replication: When the database connection is stale (such as when
  RelStorage switches to an asynchronous replica that is not yet up to
  date), RelStorage will now raise ReadConflictError by default.
  Ideally, the application will react to the error by transparently
  retrying the transaction, while the database gets up to date. A
  subsequent transaction will no longer be stale.

- Replication: Added the revert-when-stale option. When this option is
  true and the database connection is stale, RelStorage reverts the
  ZODB connection to the stale state rather than raise
  ReadConflictError. This option is intended for highly available,
  read-only ZODB clients. This option would probably confuse users of
  read-write ZODB clients, whose changes would sometimes seem to be
  temporarily reverted.

- Caching: Use the database name as the cache-prefix by default. This
  will hopefully help people who accidentally use a single memcached for
  multiple databases.

- Fixed compatibility with persistent 4.0.5 and above.

1.5.1 (2011-11-12)
------------------

- Packing: Lowered garbage collection object reference finding log level to
  debug; this stage takes mere seconds, even in large sites, but could produce
  10s of thousands of lines of log output.

- RelStorage was opening a test database connection (and was leaving it