@@ -2,6 +2,8 @@
 Next Major Release
 ------------------
 
+- commit-lock-timeout support for PostgreSQL 9.3+.
+
 - MySQL 5.5: The test suite was freezing in checkBackwardTimeTravel. Fixed.
 
 - Added performance metrics using the perfmetrics package.
